prevent email from wrapping

--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@ img.fix-ar {
 }
 .obfus {
     flex-direction: row-reverse;
+    white-space: nowrap;
 }
 .ask-upper {
     color: var(--icon-color);
